:art: increased performace and reduced code

--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
           <div>
             <label for="difficulty">Difficulty</label>
             <select name="difficulty" id="difficulty">
-              <option value="1">Intermediate</option>
-              <option value="2">Hard</option>
-              <option value="3">Expert</option>
+              <option value="1">Beginner</option>
+              <option value="2">Intermediate</option>
+              <option selected="selected" value="3">Expert</option>
               <option value="4">A.I.</option>
             </select>
           </div>
